--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 
     "autoload": {
         "psr-4":{
-            "Core\\": "app/Core" 
+            "Core\\": "app/Core",
+            "Base\\": "app/Base" 
         }
     },
     
